<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtV"
            android:textAppearance="@android:style/TextAppearance.Holo.Large"


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:hint="@string/txtV2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="52dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/txtV3" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/editTxt" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/editTxt2"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="414dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="102dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtV4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="150dp">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/RadioButtonTxt" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/RadioButtonTxt2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="189dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtV5" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="253dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtV6" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="316dp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtV7"/>

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="391dp">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtV8" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="498dp">

        <Button
            android:id="@+id/button"
            style="@android:style/Widget.DeviceDefault.Button.Borderless.Colored"
            android:layout_width="138dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:text="@string/ButtonTxt"
            android:textColorLink="@color/colorAccent" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>



